Logos for organizations
When inside a project, Teambox will display the organization's logo
If user only belongs to one organization, all pages will be branded

--- a/app/styles/_organizations.sass
+++ b/app/styles/_organizations.sass
@@ -18,6 +18,16 @@
           color: #555
           font-size: 12px
     .organization
+      .logo
+        float: left
+        margin: 0 20px 15px 0
+        border: 1px solid #F3F3F3
+      .details
+        float: left
+        display: block
+        width: 480px
+        p
+          margin-top: 0
       .micro_avatar
         display: inline-block
         margin-bottom: 10px
@@ -49,6 +59,8 @@
           padding: 10px
     textarea
       height: 40px
+  .logo_square, .logo_top
+    border: 1px solid #999
 
 .new_organizations
   form
