Preliminary custom colors for Teambox

--- a/app/styles/_autocomplete.sass
+++ b/app/styles/_autocomplete.sass
@@ -26,7 +26,7 @@ div.autocomplete
       cursor: pointer
       border-bottom: 1px solid #cccccc
     strong
-      background-color: #259bad
+      background-color: $navbar
       color: white
     li.selected
       background-color: #fff3b9
