--- a/app/styles/_calendar.sass
+++ b/app/styles/_calendar.sass
@@ -14,7 +14,7 @@ div.calendar
     width: 90px
     text-align: right
     p
-      background: rgb(102, 140, 217)
+      background: $navbar
       color: rgb(255, 255, 255)
       padding: 4px 2px 4px 2px
       margin-top: 4px
@@ -87,8 +87,8 @@ div.weektable
     font-size: 11px
     width: 90px
   p
-    background: rgb(102, 140, 217)
-    color: rgb(255, 255, 255)
+    background: $navbar
+    color: white
     padding: 4px 2px 4px 2px
     margin-top: 4px
     font-size: 11px
