--- a/app/styles/_comments.sass
+++ b/app/styles/_comments.sass
@@ -205,7 +205,7 @@ form.convert_comment
     font-weight: bold
     color: white
     text-align: center
-    background-color: #668cd9
+    background-color: $navbar
     +rounded(3px)
     padding: 0 3px
     white-space: nowrap
@@ -241,7 +241,7 @@ form.convert_comment
     color: #000
   a.mention
     &:hover
-      color: #259BAD
+      color: $navbar
 .tooltip.attach
   margin-top: 30px
   margin-left: 10px
