--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -201,6 +201,8 @@
   .column
     +rounded(5px)
   .owner
+    label
+      font-size: 12px
     margin-bottom: 20px
     .description
       margin: 20px 0
