--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -8,6 +8,7 @@
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %title= "#{@page_title} Teambox"
     = stylesheet_link_tag 'application', :media => :screen
+    = #stylesheet_link_tag 'custom', :media => :screen
     = stylesheet_link_tag 'print', :media => :print
     = sprockets_include_tag
     = yield :js_includes
