--- a/app/styles/_base.sass
+++ b/app/styles/_base.sass
@@ -15,12 +15,11 @@ table
     vertical-align: top
 
 a
-  color: #259bad
+  color: $link
   text-decoration: none
-
-a:hover
-  color: #df5249
-  text-decoration: underline
+  &:hover
+    color: $link_hover
+    text-decoration: underline
 
 div.fieldWithErrors
   display: inline
