--- a/app/views/projects/show.haml
+++ b/app/views/projects/show.haml
@@ -8,6 +8,7 @@
 #activities
   = list_threads(@threads)
   = show_more_button(@activities)
+
 = javascript_tag autorefresh(@activities, @current_project)
 = javascript_projects_people [@current_project]
 
@@ -20,7 +21,7 @@
 
   = instructions_for_feeds
   = instructions_for_calendars
-  = #print_project_link(@current_project)
   = instructions_for_email(@current_project)
+  = link_to @current_project.organization, @current_project.organization
   = link_to t('.public_project'), public_project_path(@current_project), :class => :public_link
   
