--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,6 +1,5 @@
 .header
-  - logo = @organization ? @organization.logo(:top) : logo_image
-  %h1= link_to image_tag(logo, :alt => "Teambox"), root_path
+  %h1= link_to logo_image, root_path
   
   - unless request.format == :m
     = render 'shared/global_navigation'
