--- a/app/views/invitations/_invitation.haml
+++ b/app/views/invitations/_invitation.haml
@@ -11,8 +11,8 @@
     = t('.time_ago', :time_ago_in_words => time_ago_in_words(invitation.updated_at))
   - if invitation.editable?(current_user)
     .links
-      = link_to t('invitations.invitation.resend'), polymorphic_path([:resend, target, invitation])
+      = link_to t('invitations.invitation.resend'), polymorphic_path([:resend, invitation.target, invitation])
       = loading('resend_invitation', invitation.id)
       = t('common.or')
       %span.discard= link_to t('invitations.invitation.discard'),
-        polymorphic_path([target, invitation]), 'data-method' => 'delete', 'data-remote' => true
+        polymorphic_path([invitation.target, invitation]), 'data-method' => 'delete', 'data-remote' => true
