--- a/app/views/layouts/apidocs.haml
+++ b/app/views/layouts/apidocs.haml
@@ -13,7 +13,7 @@
     .top{ :style => 'background-color: rgb(255,255,220); border-bottom: 1px solid rgb(200,200,150); width: 100%; display: block; font-size: 12px; padding: 10px 0; text-align: center' }
       This is a developer preview of Teambox API 1.0.
       It's in beta, so it's subject to changes.
-      <a href="http://teambox.com/group">Give us your feedback</a>!
+      <a href="http://teambox.com/community">Send us your feedback</a>!
     .container
       .wrapper
         #header
