--- a/app/views/organizations/_fields.haml
+++ b/app/views/organizations/_fields.haml
@@ -1,6 +1,6 @@
 - unless @organization.new_record?
   %p== Your organization's site is http://#{@organization.permalink}.teambox.com
-  %p= @organization.has_logo? #src = group.has_logo? ? group.logo.url(:icon) : "/images/icon_logo_black.png"
+  %p= @organization.has_logo?
   %p= @organization.logo.url(:square)
 
 .text_field
