--- a/app/styles/_icons.sass
+++ b/app/styles/_icons.sass
@@ -19,6 +19,8 @@
   +sprite_16px(16px*15, 16px*4)
 =public_icon
   +sprite_16px(16px*15, 16px*5)
+=leave_icon
+  +sprite_16px(16px*15, 16px*6)
 
 .trash_icon
   +hoverable_sprite_16px(16px*0, 0px, 16px, 16px)
