--- a/app/styles/_projects.sass
+++ b/app/styles/_projects.sass
@@ -93,7 +93,7 @@
     margin: 15px 0
     display: block
 
-  a.gantt_link, a.calendars_link, a.print_link, a.email_link, a.subscribe, a.public_link
+  a.gantt_link, a.calendars_link, a.print_link, a.email_link, a.subscribe, a.public_link, a.leave_link
     display: block
     margin-top: 5px
     font-size: 13px
@@ -109,6 +109,9 @@
     +mail_icon
   a.public_link
     +public_icon
+  a.leave_link
+    margin-top: 20px
+    +leave_icon
   a.subscribe
     margin-top: 15px
     +feed_icon
