--- a/app/views/people/index.haml
+++ b/app/views/people/index.haml
@@ -28,6 +28,4 @@
     - current_person = @people.find { |p| p.user == current_user }
     %h2= t('people.column.leaving')
     %p= t('people.column.you_can_leave')
-    %p= link_to t('people.column.leave_project'),
-          project_person_path(@current_project, current_person), 
-          :method => :delete, :confirm => t('people.column.confirm_delete')
+    %p= leave_project_link(@current_project)
