Organization admins can join projects, and any user can join public projects
Now there's an intermediate screen for it and tests

--- a/app/views/organizations/_column.haml
+++ b/app/views/organizations/_column.haml
@@ -3,22 +3,23 @@
     = organization_navigation(@organization)
 
   .todo{ :style => 'color:red; display: none' }
-    %p Admins of an org should be able to join as admins for any project
-    %p Link to organization inside Project#show
-    %p
-    %p Invite to organization (UserController#create has some logic)
-    %p On open-source, we can use only one company and manage permissions with it
-    %p Leave org, delete org
-    %p Users should be observable when you share an organization or project (spec)
-    %p
-    %p Careful with premium checks for Groups on hosted..
-    %p
-    %p Revisit mobile version completely
-    %p
-    %p Invitations:
-    %p   Add organization's name
-    %p   Ability to invite to organization, too
-    %p
-    %p Invite people from the organization
-    %p
-    %p Do a mono-company mode on cucumbers
+    Link to organization inside Project#show
+
+    Invite to organization (UserController#create has some logic)
+
+    On open-source, we can use only one company and manage permissions with it
+    Do a mono-company mode on cucumbers
+
+    Leave org, delete org
+    Users should be observable when you share an organization or project (spec)
+
+    Careful with premium checks for Groups on hosted..
+
+    Revisit mobile version completely
+
+    Invitations:
+    Add organization's name
+    Ability to invite to organization, too
+
+    Invite people from the organization
+
