Invite to an organization while inviting to a project
Fix invitation tests and add membership to invitations

--- a/app/styles/_users.sass
+++ b/app/styles/_users.sass
@@ -184,6 +184,8 @@ $micro_size: 24px
       .text_field
         label
           width: 600px
+      select
+        max-width: 600px
   .people
     .person
       +clearing
