Reverts back my shiny application settings javascript object

--- a/app/views/javascripts/environment.erb
+++ b/app/views/javascripts/environment.erb
@@ -1,3 +1,4 @@
+<%= "AppConfig = new Object(); AppConfig.project_permalink_min_length = #{APP_CONFIG['project_permalink_min_length']};" %>
 <%=
     weekday_list = t('calendar.abbr_weekdays')
     
