A bit sexier popup calendar layout (padding, round corners, box shadows)

--- a/app/styles/_calendar_date_select.sass
+++ b/app/styles/_calendar_date_select.sass
@@ -1,4 +1,10 @@
 .calendar_date_select
+  -moz-border-radius: 4px
+  -webkit-border-radius: 4px
+  padding: 10px
+  box-shadow: 0 0 5px rgb(153, 153, 153)
+  -moz-box-shadow: 0 0 5px rgb(153, 153, 153)
+  -webkit-box-shadow: 0 0 5px rgb(153, 153, 153)
   background: white
   display: block
   width: 250px
