Community edition: Brand your site, manage users from the web app
Introduces the "community" mode
No public signup. Only invited people may access the system
Admins can view all the projects on the system

--- a/app/styles/sites.sass
+++ b/app/styles/sites.sass
@@ -1,4 +1,4 @@
-.show_sites, .create_sites
+.new_sessions, .create_sessions, .new_sites, .create_sites
   .custom_html
     margin: 30px 20px 30px 0
     li
@@ -14,3 +14,4 @@
     color: rgb(50,50,0)
     -moz-border-radius: 4px
     -webkit-border-radius: 4px
+  .signup_or_forgot_links
