--- a/app/views/organizations/_column.haml
+++ b/app/views/organizations/_column.haml
@@ -3,12 +3,7 @@
     = organization_navigation(@organization)
 
   .todo{ :style => 'color:red; display: none' }
-    Link to organization inside Project#show
-
     Invite to organization (UserController#create has some logic)
-
-    On open-source, we can use only one company and manage permissions with it
-    Do a mono-company mode on cucumbers
 
     Leave org, delete org
     Users should be observable when you share an organization or project (spec)
@@ -23,3 +18,12 @@
 
     Invite people from the organization
 
+    Participants shouldn't be able to edit Organization
+
+    "customize your app" screen
+
+    Invite people already in the org to a project
+    
+    Cleanup welcome
+    
+    Textilized pre width to 500
