Removing user.welcome column

--- a/app/views/users/welcome.haml
+++ b/app/views/users/welcome.haml
@@ -24,4 +24,4 @@
   %p= t('.spread.tell_us', :address => 'love@teambox.com')
 
 - content_for :column do
-  = link_to t('.stop_welcome'), close_wecome_tab_path
+  = "&nbsp;"
