Documenting the custom HTML feature for organizations

--- a/app/styles/_forms.sass
+++ b/app/styles/_forms.sass
@@ -19,6 +19,10 @@ form
     margin-top: 5px
     font-size: 16px
 
+  .option_fields
+    label
+      +label-styles
+
   .text_field, .text_area
     margin-bottom: 10px
     label
