--- a/app/styles/_organizations.sass
+++ b/app/styles/_organizations.sass
@@ -58,7 +58,9 @@
           background: transparent
           padding: 10px
     textarea
-      height: 40px
+      height: 120px
+      width: 580px
+      font-size: 12px
   .logo_square, .logo_top
     border: 1px solid #999
 
