--- a/app/styles/sites.sass
+++ b/app/styles/sites.sass
@@ -1,4 +1,4 @@
-.new_sessions, .create_sessions, .new_sites, .create_sites
+.new_sessions, .create_sessions, .new_sites, .create_sites, .show_sites
   .custom_html
     margin: 30px 20px 30px 0
     li
