--- a/app/views/organizations/_column.haml
+++ b/app/views/organizations/_column.haml
@@ -4,17 +4,16 @@
 
   .todo{ :style => 'color:red; display: none' }
     Invite to organization (UserController#create has some logic)
-
     Leave org, delete org
-    Users should be observable when you share an organization or project (spec)
+
+    Users should be observable (User#show) when you share an organization or project (spec)
 
     Careful with premium checks for Groups on hosted..
 
     Revisit mobile version completely
 
-    Invitations:
-    Add organization's name
-    Ability to invite to organization, too
+    Invitation emails should..
+    Have organization's name
 
     Invite people from the organization
 
