--- a/app/views/shared/_header.m.haml
+++ b/app/views/shared/_header.m.haml
@@ -2,7 +2,7 @@
   %table{ :width => '100%' }
     %tr
       %td
-        %h1= link_to image_tag('/images/header_logo_white.png'), activities_path
+        %h1= link_to logo_image, activities_path
       %td{ :style => 'text-align: right' }
         %small
           Signed in as
