--- a/app/views/javascripts/environment.erb
+++ b/app/views/javascripts/environment.erb
@@ -39,7 +39,7 @@ time_pm = '<%= I18n.t('time.pm') %>';
 time_am = '<%= I18n.t('time.am') %>';
 
 date_format_short = '<%= I18n.t('date.formats.short')%>';
-date_format_short = '<%= I18n.t('date.formats.long')%>';
+date_format_long = '<%= I18n.t('date.formats.long')%>';
 date_abbr_day_names = $w("<%= I18n.t('date.abbr_day_names').join(" ") %>");
 date_day_names = $w("<%= I18n.t('date.day_names').join(" ") %>");
 date_abbr_month_names = $w("<%= I18n.t('date.abbr_month_names').join(" ") %>");
