--- a/app/styles/_shared.sass
+++ b/app/styles/_shared.sass
@@ -2,7 +2,7 @@ $highlight: #fff9da
 $navbar: #78acd7
 $text: #333
 $typeface: "Lucida Grande", Helvetica, "Helvetica Neue", Arial, Verdana, sans-serif
-$link: $navbar - #220
+$link: #259bad
 $link_hover: #df5249
 
 =rounded($n)
