Fixing stylesheet problems with organizations

--- a/app/styles/_organizations.sass
+++ b/app/styles/_organizations.sass
@@ -37,7 +37,7 @@
         color: #999
 
 .new_organizations, .create_organizations, .edit_organizations, .update_organizations
-  form
+  form.edit_organization, form.new_organization
     margin: 20px 0
     border: 1px solid #ddd
     background-color: #fafafa
@@ -65,7 +65,7 @@
     border: 1px solid #999
 
 .new_organizations
-  form
+  form.new_organization
     margin: 20px 0
 
 .projects_organizations
