--- a/app/styles/_search.sass
+++ b/app/styles/_search.sass
@@ -2,7 +2,11 @@
   float: right
   padding-top: 6px
   margin-right: 1.5em
-  form
+  form.search
+    margin: 0
+    padding: 0
+    background: transparent
+    border: none
     input[type=submit]
       display: none
     .no-inputsearch &
