--- a/app/views/layouts/sites.haml
+++ b/app/views/layouts/sites.haml
@@ -4,7 +4,7 @@
     %meta{ 'http-equiv' => "content-type", :content => "text/html;charset=utf-8" }
     %link{ :rel => "shortcut icon", :href => "/favicon.ico" }
     %title= @organization
-    = stylesheet_link_tag 'public', 'sites'
+    = stylesheet_link_tag 'sessions', 'sites'
     = sprockets_include_tag
 
   %body{ :class => "#{location_name} #{I18n.locale} #{ENV['RAILS_ENV']}"}
