--- a/app/views/javascripts/environment.erb
+++ b/app/views/javascripts/environment.erb
@@ -1,5 +1,5 @@
 <%=
-    weekday_list = t('calendar.abbr_weekdays')
+    weekday_list = t('calendar.abbr_weekdays').clone
     
     if ( current_user && current_user.first_day_of_week == 'monday' )
       weekday_list << weekday_list.shift
