--- a/app/styles/mobile.sass
+++ b/app/styles/mobile.sass
@@ -129,12 +129,14 @@ h2
       a
         text-decoration: none
         color: black
+        border-bottom: 1px dashed #bbb
       .activity
         display: block
         padding: 10px
         border-bottom: 1px solid #dddddd
         min-height: 50px
         .thumb_avatar
+          border: none
           float: left
           width: 48px
           height: 48px
@@ -320,8 +322,9 @@ div.task_list, div.task_list_closed
 
 .task_list_container
   .new_task
-    padding: 5px 0px
-  border-bottom: 1px solid #dddddd
+    padding: 5px 0px 5px 15px
+    font-size: 12px
+  margin-bottom: 10px
 
 .task_list_container.archived
   .new_task
