--- a/app/views/task_lists/_task_list.m.haml
+++ b/app/views/task_lists/_task_list.m.haml
@@ -1,21 +1,20 @@
 - show_archive_link = (task_list.tasks.unarchived.empty? && task_list.tasks.archived.size > 0)
 - header_on_index = @on_index || (action_name == 'index')
 - show_the_lists = !(header_on_index and task_list.archived)
-.task_list_container{ :id => task_list_id(nil,project,task_list), :class => (task_list.archived ? 'archived' : nil) }
-  .task_list{ :id => task_list_id(:with_main_tasks,project,task_list), :action_url => project_task_list_path(project,task_list) }
-    .head{:id => task_list_id(:header_index,project,task_list) }
+.task_list_container{ :class => (task_list.archived ? 'archived' : nil) }
+  .task_list
+    .head
       = task_list_index_header(project,task_list)
     - if !header_on_index
       = task_list_archive_box(project,task_list)
     - if show_the_lists
-      %div{ :id => task_list_id(:the_main_tasks,project,task_list), :class => 'tasks open', :reorder_url => project_reorder_tasks_path(project,task_list) }
+      %div{ :class => 'tasks open' }
         - if !task_list.archived
           = list_tasks(task_list,task_list.tasks.unarchived,false)
       - if task_list_editable?(task_list,current_user)
         .new_task
           = task_link(project,task_list)
           = task_form(project,task_list,task_list.new_task(current_user))
-          %span{ :id => task_list_id(:archive_link,project,task_list), :style => (show_archive_link ? nil : 'display:none') }
-            = t('common.or')
-            = archive_task_list_link(project,task_list, header_on_index)
-
+          -#%span{ :id => task_list_id(:archive_link,project,task_list), :style => (show_archive_link ? nil : 'display:none') }
+          -#  = t('common.or')
+          -#  = archive_task_list_link(project,task_list, header_on_index)
