--- a/app/views/organizations/projects.haml
+++ b/app/views/organizations/projects.haml
@@ -1,6 +1,7 @@
 %h2= t('.title', :name => @organization)
 
-%p= t('.instructions', :organizations_link => organizations_path)
+- unless Teambox.config.community
+  %p= t('.instructions', :organizations_link => organizations_path)
 
 %p.new_project= link_to t('.new_project'), new_project_path, :class => :add_button
 
