i18n for organizations controller

--- a/app/views/organizations/_organization.haml
+++ b/app/views/organizations/_organization.haml
@@ -2,7 +2,7 @@
   %h3
     = link_to organization.name, organization
     - role = current_user.memberships.find_by_organization_id(organization.id).role_name
-    %span== You're an <strong>#{t(".#{role}")}</strong> of this organization
+    %span= t('.you_are', :role => t(".#{role}"))
   %img.logo{ :src => organization.logo.url(:square) }
   .details
     %p= t('.number_of_projects', :count => organization.projects.count)
@@ -10,6 +10,6 @@
       - organization.users.each do |user|
         = micro_avatar(user)
       - if organization.users.size > 28
-        %span.more_users= "and #{organization.users.size-28} more users"
+        %span.more_users= t(".more_users", :count => organization.users.size-28)
       .clear
   .clear
