--- a/app/views/task_lists/_task_list.m.haml
+++ b/app/views/task_lists/_task_list.m.haml
@@ -13,8 +13,4 @@
           = list_tasks(task_list,task_list.tasks.unarchived,false)
       - if task_list_editable?(task_list,current_user)
         .new_task
-          = task_link(project,task_list)
-          = task_form(project,task_list,task_list.new_task(current_user))
-          -#%span{ :id => task_list_id(:archive_link,project,task_list), :style => (show_archive_link ? nil : 'display:none') }
-          -#  = t('common.or')
-          -#  = archive_task_list_link(project,task_list, header_on_index)
+          = link_to t('tasks.link.new'), [:new, project, task_list, :task]
