--- a/app/views/tasks/_task.haml
+++ b/app/views/tasks/_task.haml
@@ -1,8 +1,8 @@
-/ this code supports the "tasks_for_all_projects" template
+-# this code supports the "tasks_for_all_projects" template
 - project ||= task.project
 - task_list ||= task.task_list
 
-%div[task]
+%div[task]{ :class => task_classes(task) }
   .inner
     .taskStatus	
       - if editable and !task.archived?
