--- a/app/views/task_lists/index.html.haml
+++ b/app/views/task_lists/index.html.haml
@@ -12,7 +12,7 @@
   - if @current_project.editable?(current_user)
     = task_list_form(@current_project,TaskList.new)
 
-  #task_lists{:reorder_url => project_reorder_task_lists_path(@current_project)}
+  #task_lists
     = render_task_lists(@current_project,@task_lists)
 
   = task_list_primer(@current_project, @task_lists.any?)
