--- a/app/views/task_lists/index.m.haml
+++ b/app/views/task_lists/index.m.haml
@@ -5,7 +5,7 @@
     - if @current_project.editable?(current_user)
       = task_list_form(@current_project,TaskList.new)
     
-    #task_lists{:reorder_url => project_reorder_task_lists_path(@current_project)}
+    #task_lists
       = render_task_lists(@current_project,@task_lists)
       .new
         = link_to t('task_lists.link.new'), new_project_task_list_path(@current_project, @task_list), :class => 'new'
