--- a/app/views/comments/_comment.haml
+++ b/app/views/comments/_comment.haml
@@ -1,7 +1,8 @@
-- threaded = defined?(threaded) && threaded
-- simpleconv = defined?(simpleconv) && simpleconv
+- threaded = false unless local_assigns[:threaded]
+- simpleconv = false unless local_assigns[:simpleconv]
+
 - cache_editable_comment(comment, threaded, simpleconv) do
-  .comment{:id => "comment_#{comment.id}", :immutable_at => datetime_ms(comment.created_at + 15.minutes) }
+  %div[comment]{ :'data-editable-before' => datetime_ms(15.minutes.since(comment.created_at)) }
     .info
       - if threaded
         = micro_avatar(comment.user)
@@ -11,24 +12,23 @@
       - unless rss?
         .actions_menu
           %span.actiondate= posted_date comment.created_at
-          %span.loading{:style => 'display:none'}= t('.loading')
-          - if can?(:modify, comment)
+          - if can?(:update, comment) or can?(:destroy, comment)
             = image_tag('triangle.png', :class => 'triangle')
             .extra
-              - if comment.target.is_a?(Project) and comment.project.editable?(current_user)
-                = convert_comment_link(comment)
-              - if can? :edit, comment
-                = edit_comment_link(comment)
-              .tactione{:style => (comment.can_edit?(current_user) ? 'display:none' : nil)}
-                = t('.cannot_edit')
-              - if can? :destroy, comment
-                = delete_comment_link(comment)
+              - if can?(:update, comment)
+                = link_to t('comments.actions.edit'), [:edit, comment.project, comment.target, comment],
+                    :rel => 'facebox', :'data-uneditable-message' => t('.cannot_edit')
+              - else
+                %span= t('.cannot_edit')
+              - if can?(:destroy, comment)
+                = link_to t('common.delete'), [comment.project, comment.target, comment], :'data-method' => 'delete',
+                    :'data-confirm' => t('.confirm_delete'), :'data-remote' => true
       .name
         - if threaded || simpleconv
           = link_to(comment.user.name, comment.user)
         - else
           = activity_title(comment)
-        - if comment.target_type == 'Task'
+        - if comment.task_comment?
           - comment_task_status(comment)
         - if comment.hours?
           %span.hours= friendly_hours_value(comment.hours)
