Removing the task icon in threads' titles
It confused people seeing a green tick, so we're just leaving the task list icon

--- a/app/styles/_threads.sass
+++ b/app/styles/_threads.sass
@@ -31,7 +31,7 @@
         &.conversation
           background: url(/images/comment.gif) no-repeat left
         &.task
-          background: url(/images/task.png) no-repeat left
+          padding-left: 0
         &.task_list
           background: url(/images/task_list.png) no-repeat left
   .comments
